# DocIntellect

./: .env.example  .gitignore  LICENSE  Makefile  README.md  pyproject.toml  run.py  setup.bat
.github/workflows/: ci.yml
app/api/: main.py
app/api/dependencies/: container.py
app/api/routes/: documents.py
app/api/schemas/: document.py
app/core/: __init__.py  config.py  database.py  logging.py  models.py
app/domain/document/: __init__.py
app/domain/extraction/: __init__.py
app/domain/validation/: __init__.py
app/extractors/: document_parser.py  smart_parse.py  text_formatter.py
app/extractors/llm_fallback/: extractor.py
app/extractors/nlp/: entity_extractor.py
app/extractors/nlp/classifiers/: document_classifier.py
app/extractors/ocr/: __init__.py  factory.py  paddle_ocr.py  tesseract.py
app/pipeline/: orchestrator.py
app/pipeline/stages/: classification_stage.py  extraction_stage.py  ocr_stage.py  preprocessing.py  validation_stage.py
app/storage/: __init__.py
app/ui/: app.py
app/workers/: __init__.py  tasks.py
docker/: Dockerfile  docker-compose.yml
scripts/: test_api.py
tests/integration/: test_api.py
tests/unit/: test_classifier.py  test_document_parser.py  test_extractor.py  test_text_formatter.py  test_validation.py
